[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-analytics-export"
version = "1.0.0"
description = "Export Piano Analytics data via restricted API keys to CSV"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Jan-Philipp Igla", email = "hello@jpigla.de" },
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.30",
]

[project.urls]
Repository = "https://github.com/jpigla/piano-analytics-export"

[project.scripts]
piano-analytics-export = "piano_analytics_export.cli:main"